@@ -1,4 +1,4 @@
 DIST CurseTheWeather-0.6.tar.gz 12987 RMD160 04bf72da31227105f1221567d972b87fcf2c3811 SHA1 ab91f4dd3205f7186b70a47951387d66cac2f0e0 SHA256 29a2d545e4e51398d5cf28385912be5966c0c18292bb00c19d736fc518145389
-EBUILD cursetheweather-0.6.ebuild 499 RMD160 cfab3e1d752c82ddb8b1741031179b0434e96640 SHA1 ca1fe4d210e41f7be4ffd12e0d00b6013e4de7be SHA256 7ddbf9e3e28e2d40b94a27ddcf7d24aa3a2de73cbecc52529981c06c9c99b32d
-MISC ChangeLog 489 RMD160 1f6143e987a71923f65c6b7f92ebecac7b046b71 SHA1 9f78d033a53aaa5ce5748a2fc134e54fded56d78 SHA256 6194caf84fed77c7b35f480f18642eee8e5a6fcdc846d75670288ef961554464
+EBUILD cursetheweather-0.6.ebuild 570 RMD160 e61e0a088e3a1a00c6c583c8eb9368ca8b08387b SHA1 1d0abcd0fd5bbd28256dd64e84c109612bd5a9ad SHA256 faaea15d229e72d60af7e5ce7d6686073ed0cf6c62926ff20b0535bcd3ee1ef8
+MISC ChangeLog 610 RMD160 1944ba448075cfbe3f5c960a2f6518d7d733d907 SHA1 eb141c7e6f3384e8813ac8c35798e2dfd41a29cc SHA256 8a72a1a0a0bdb5e9567ae51b3a4466977c4f50d76c63ff7b48b37f261aa44652
 MISC metadata.xml 229 RMD160 f0f6417bec31ce8baba6d476664f7210c8c84c98 SHA1 e5f94f5caadc6f843fc90bb7959570cd503676fd SHA256 3b08fca3c878bdfc4e7639f477dd542d55a4ab5dce39a475e82633071d13eb3f
